examples/reference/module_use_private_error.err
Assembly failed:
9: ERROR [asm301]
    9 |     .use alpha (SECRET)
                ^
ERROR: Symbol is private: SECRET
